// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Link /> Renders with active className 1`] = `
<a
  class="text-primary-300 dark:text-primary-300"
  href="#"
>
  Children
</a>
`;

exports[`<Link /> Renders with children 1`] = `
<a
  class=""
  href="#"
>
  Children
</a>
`;
